2008-06-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require gmyth 0.7.1 so we work with newer versions
	of MythTV (== 0.21) (Closes: #537724)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* README:
	* src/totem.c (totem_action_open_files_list),
	(totem_action_remote), (totem_action_handle_key_press):
	'+' and '-' on their own can now be used to go to the next/previous
	track, Force playback when using DVB, otherwise playback won't
	autostart

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_metadata): Fix warning when fetching cover art

	* src/backend/bacon-video-widget-xine.c (xine_event_message),
	(bacon_video_widget_get_metadata): As above, and also try to give a
	better error message when TV signal is lost

	* src/totem-video-thumbnailer.c: Always have --g-fatal-warnings
	enabled

2008-06-16  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_metadata): Fix warning when trying to get
	the cover, which xine-lib doesn't support

2008-06-15  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c (bacon_video_widget_init),
	(bacon_video_widget_get_mrls): Don't say we can't support DVB: just
	because we're missing a simple channels.conf, it might appear before
	we try to use DVB,
	Set the device as expected when supporting multiple DVB adapters

============ Version 2.23.4

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.4

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/10-data/*:
	* browser-plugin/tests/10.html: Add test case, ripped from
	Apple's test page for Wall E

2008-06-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require gstreamer-tag as well
	* src/backend/bacon-video-widget.h:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_metadata_pixbuf),
	(bacon_video_widget_get_best_image),
	(bacon_video_widget_get_metadata): Add code to read covers from