@@ -1,3 +1,8 @@
+2008-05-31  Christian Persch <chpe@gnome.org>
+
+	* *.[ch]: Use GType and G_TYPE_* macros instead of the deprecated
+	GtkType/GTK_CHECK_* macros. Bug #539168.
+
 2008-06-19  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in: Require gmyth 0.7.1 so we work with newer versions
